NIFI-4239 - Adding CaptureChangePostgreSQL processor to capture data changes (INSERT/UPDATE/DELETE) in PostgreSQL tables via Logical Replication. Refactor original PR - code formatting, applying some Java best practices, revise exception handling, better closing resources, Java naming conventions (e.g. package name lowercase), add null checks in various places, cleanup, fix config, ... - add logging - remove useless Groovy tests - integration tests - add licenses / notices - Jackson version via property - use latest version of testcontainers