@@ -17,28 +17,6 @@
 
 package org.apache.nifi.cdc.postgresql.processors;
 
-import java.io.IOException;
-import java.io.OutputStream;
-import java.net.MalformedURLException;
-import java.nio.charset.StandardCharsets;
-import java.sql.Connection;
-import java.sql.Driver;
-import java.sql.DriverManager;
-import java.sql.DriverPropertyInfo;
-import java.sql.SQLException;
-import java.sql.SQLFeatureNotSupportedException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.logging.Logger;
-
 import org.apache.nifi.annotation.behavior.InputRequirement;
 import org.apache.nifi.annotation.behavior.PrimaryNodeOnly;
 import org.apache.nifi.annotation.behavior.Stateful;
@@ -51,9 +29,9 @@ import org.apache.nifi.annotation.lifecycle.OnScheduled;
 import org.apache.nifi.annotation.lifecycle.OnShutdown;
 import org.apache.nifi.annotation.lifecycle.OnStopped;
 import org.apache.nifi.cdc.CDCException;
-import org.apache.nifi.cdc.postgresql.pgEasyReplication.ConnectionManager;
-import org.apache.nifi.cdc.postgresql.pgEasyReplication.PGEasyReplication;
-import org.apache.nifi.cdc.postgresql.pgEasyReplication.Event;
+import org.apache.nifi.cdc.postgresql.pgeasyreplication.ConnectionManager;
+import org.apache.nifi.cdc.postgresql.pgeasyreplication.Event;
+import org.apache.nifi.cdc.postgresql.pgeasyreplication.PGEasyReplication;
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.components.state.Scope;
 import org.apache.nifi.components.state.StateManager;
@@ -68,30 +46,56 @@ import org.apache.nifi.processor.ProcessSession;
 import org.apache.nifi.processor.ProcessorInitializationContext;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.exception.ProcessException;
-import org.apache.nifi.processor.io.OutputStreamCallback;
 import org.apache.nifi.processor.util.StandardValidators;
 import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.util.file.classloader.ClassLoaderUtils;
 
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.nio.charset.StandardCharsets;
+import java.sql.Connection;
+import java.sql.Driver;
+import java.sql.DriverManager;
+import java.sql.DriverPropertyInfo;
+import java.sql.SQLException;
+import java.sql.SQLFeatureNotSupportedException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Properties;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.logging.Logger;
+
 /**
- * A processor to retrieve Change Data Capture (CDC) events and send them as flow files.
+ * A processor to Capture Data Change (CDC) events from Postgres and return them as flow files.
  */
 @TriggerSerially
 @InputRequirement(InputRequirement.Requirement.INPUT_FORBIDDEN)
 @PrimaryNodeOnly
-@Tags({ "sql", "jdbc", "cdc", "postgresql" })
+@Tags({"sql", "jdbc", "cdc", "postgresql"})
 @CapabilityDescription("Retrieves Change Data Capture (CDC) events from a PostgreSQL database. Works for PostgreSQL version 10+. CDC Events include INSERT, UPDATE, DELETE operations. Events "
         + "are output as individual flow files ordered by the time at which the operation occurred. This processor use a replication connection to stream data and sql connection to snapshot.")
-@Stateful(scopes = Scope.CLUSTER, description = "Information such as a 'pointer' to the current CDC event in the database is stored by this processor, such "
-        + "that it can continue from the same location if restarted.")
+@Stateful(scopes = Scope.CLUSTER,
+        description = "Information such as a 'pointer' to the current CDC event in the database is stored by this processor, such that it can continue from the same location if restarted.")
 @WritesAttributes({
-        @WritesAttribute(attribute = "last.lsn.received", description = "A Log Sequence Number  (i.e. strictly increasing integer value) specifying the order "
-                + "of the CDC event flow file relative to the other event flow file(s)."),
-        @WritesAttribute(attribute = "mime.type", description = "The processor outputs flow file content in JSON format, and sets the mime.type attribute to " + "application/json") })
-
+        @WritesAttribute(
+                attribute = "last.lsn.received",
+                description = "A Log Sequence Number  (i.e. strictly increasing integer value) specifying the order of the CDC event flow file relative to the other event flow file(s)."),
+        @WritesAttribute(
+                attribute = "mime.type",
+                description = "The processor outputs flow file content in JSON format, and sets the mime.type attribute to application/json")
+})
 public class CaptureChangePostgreSQL extends AbstractProcessor {
     // Relationships
-    public static final Relationship REL_SUCCESS = new Relationship.Builder().name("success").description("Successfully created FlowFile from CDC event.").build();
+    public static final Relationship REL_SUCCESS = new Relationship.Builder()
+            .name("success")
+            .description("Successfully created FlowFile from CDC event.")
+            .build();
+
     // Properties
     public static final PropertyDescriptor HOST = new PropertyDescriptor.Builder()
             .name("cdc-postgresql-host")
@@ -102,14 +106,14 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
                     + "to the active node (assuming its host entry is specified in this property.  The default port for PostgreSQL connections is 5432.")
             .required(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
+            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
             .build();
 
     public static final PropertyDescriptor DRIVER_NAME = new PropertyDescriptor.Builder()
             .name("cdc-postgresql-driver-class")
             .displayName("PostgreSQL Driver Class Name")
             .description("The class name of the PostgreSQL database driver class")
-            .defaultValue("org.postgresql.Driver")
-            .required(true)
+            .defaultValue("org.postgresql.Driver").required(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
             .build();
@@ -117,8 +121,7 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
     public static final PropertyDescriptor DRIVER_LOCATION = new PropertyDescriptor.Builder()
             .name("cdc-postgresql-driver-locations")
             .displayName("PostgreSQL Driver Location(s)")
-            .description("Comma-separated list of files/folders and/or URLs containing the PostgreSQL driver JAR and its dependencies (if any)."
-                    + "For example '/var/tmp/postgresql-42.2.9.jar'")
+            .description("Comma-separated list of files/folders and/or URLs containing the PostgreSQL driver JAR and its dependencies (if any). For example '/var/tmp/postgresql-42.2.9.jar'")
             .defaultValue(null)
             .required(false)
             .addValidator(StandardValidators.createListValidator(true, true, StandardValidators.createURLorFileValidator()))
@@ -130,23 +133,27 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
             .displayName("Database")
             .description("Specifies the name of the database to connect to.")
             .required(true)
-            .addValidator(StandardValidators.NON_EMPTY_VALIDATOR).build();
+            .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
+            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+            .build();
 
     public static final PropertyDescriptor USERNAME = new PropertyDescriptor.Builder()
             .name("cdc-postgresql-user")
             .displayName("Username")
-            .description("Username to access PostgreSQL cluster.")
+            .description("Username to access PostgreSQL (cluster).")
             .required(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
+            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
             .build();
 
     public static final PropertyDescriptor PASSWORD = new PropertyDescriptor.Builder()
             .name("cdc-postgresql-password")
             .displayName("Password")
-            .description("Password to access PostgreSQL cluster.")
+            .description("Password to access PostgreSQL (cluster).")
             .required(false)
             .sensitive(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
+            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
             .build();
 
     public static final PropertyDescriptor PUBLICATION = new PropertyDescriptor.Builder()
@@ -155,6 +162,7 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
             .description("PostgreSQL publication name. A publication is essentially a group of tables whose data changes are intended to be replicated through logical replication.")
             .required(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
+            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
             .build();
 
     public static final PropertyDescriptor SLOT_NAME = new PropertyDescriptor.Builder()
@@ -164,6 +172,7 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
                     + "and the underscore character. Existing replication slots and their state can be seen in the pg_replication_slots view.")
             .required(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
+            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
             .build();
 
     public static final PropertyDescriptor SNAPSHOT = new PropertyDescriptor.Builder()
@@ -173,7 +182,7 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
                     + "process. This process will create its own temporary replication slot and copy the existing data. Once existing data is copied, "
                     + "the worker enters synchronization mode, which ensures that the table is brought up to a synchronized state with the main apply "
                     + "process by streaming any changes that happened during the initial data copy using standard logical replication. Once the "
-                    + "synchronization is done, the control of the replication of the table is given back to the main apply process where the replication " + "continues as normal.")
+                    + "synchronization is done, the control of the replication of the table is given back to the main apply process where the replication continues as normal.")
             .required(true)
             .allowableValues("true", "false")
             .defaultValue("false")
@@ -188,6 +197,16 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
             .required(true)
             .allowableValues("true", "false")
             .defaultValue("false")
+            .addValidator(StandardValidators.BOOLEAN_VALIDATOR)
+            .build();
+
+    public static final PropertyDescriptor SIMPLE_EVENTS = new PropertyDescriptor.Builder()
+            .name("cdc-postgresql-simple-events")
+            .displayName("Create simple/complex events")
+            .description("Specifies whether events should omit 'complex' details like xid, xCommitTime, numColumns, TupleType, LSN, etc.")
+            .required(false)
+            .allowableValues("true", "false")
+            .defaultValue("true")
             .addValidator(StandardValidators.BOOLEAN_VALIDATOR)
             .build();
 
@@ -224,49 +243,44 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
     public static final String LAST_LSN_RECEIVED = "last.lsn.received";
 
     // Attributes of Processor
-    private AtomicBoolean hasRun = new AtomicBoolean(false);
+    private final AtomicBoolean hasRun = new AtomicBoolean(false);
     private volatile Long lastLSNReceived = null;
-    private volatile Boolean includeBeginCommit = false;
+    private volatile boolean includeBeginCommit = false;
+    private volatile boolean simpleEvents = false;
     private Long initialLSN = 0L;
     private PGEasyReplication pgEasyReplication = null;
     boolean hasSnapshot = false;
     private ConnectionManager connectionManager;
 
-    // update lastLSNReceived on processor state
+    // Update lastLSNReceived on processor state
     private void updateState(StateManager stateManager) throws IOException {
         // Update state with latest values
         if (stateManager != null) {
             Map<String, String> newStateMap = new HashMap<>(stateManager.getState(Scope.CLUSTER).toMap());
 
-            newStateMap.put(LAST_LSN_RECEIVED, String.valueOf(this.lastLSNReceived));
+            newStateMap.put(LAST_LSN_RECEIVED, String.valueOf(lastLSNReceived));
             stateManager.setState(newStateMap, Scope.CLUSTER);
         }
     }
 
     /**
-     * using Thread.currentThread().getContextClassLoader(); will ensure that you are using the ClassLoader for you NAR.
+     * Using Thread.currentThread().getContextClassLoader(); Will ensure that you are using the ClassLoader for you NAR.
      *
-     * @throws InitializationException
-     *             if there is a problem obtaining the ClassLoader
-     */
+     * @throws InitializationException if there is a problem obtaining the ClassLoader
+     **/
     protected void registerDriver(String locationString, String drvName) throws InitializationException {
         if (locationString != null && locationString.length() > 0) {
             try {
                 // Split and trim the entries
-                final ClassLoader classLoader = ClassLoaderUtils.getCustomClassLoader(locationString, this.getClass().getClassLoader(), (dir, name) -> name != null && name.endsWith(".jar"));
+                final ClassLoader classLoader = ClassLoaderUtils.getCustomClassLoader(locationString, getClass().getClassLoader(), (dir, name) -> name != null && name.endsWith(".jar"));
 
                 // Workaround which allows to use URLClassLoader for JDBC driver loading.
-                // (Because the DriverManager will refuse to use a driver not loaded by the
-                // system ClassLoader.)
+                // Because the DriverManager will refuse to use a driver not loaded by the
+                // system ClassLoader.
                 final Class<?> clazz = Class.forName(drvName, true, classLoader);
-                if (clazz == null) {
-                    throw new InitializationException("Can't load Database Driver " + drvName + " location" + locationString + "classLoader" + classLoader.toString());
-                }
-                final Driver driver = (Driver) clazz.newInstance();
+                getLogger().info("Successfully loaded class {} using classLoader {}", clazz, classLoader);
+                final Driver driver = (Driver) clazz.getDeclaredConstructor().newInstance();
                 DriverManager.registerDriver(new DriverShim(driver));
-
-            } catch (final InitializationException e) {
-                throw e;
             } catch (final MalformedURLException e) {
                 throw new InitializationException("Invalid Database Driver Jar Url", e);
             } catch (final Exception e) {
@@ -276,40 +290,40 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
     }
 
     private static class DriverShim implements Driver {
-        private Driver driver;
+        private final Driver driver;
 
         DriverShim(Driver d) {
-            this.driver = d;
+            driver = d;
         }
 
         @Override
         public boolean acceptsURL(String u) throws SQLException {
-            return this.driver.acceptsURL(u);
+            return driver.acceptsURL(u);
         }
 
         @Override
         public Connection connect(String u, Properties p) throws SQLException {
-            return this.driver.connect(u, p);
+            return driver.connect(u, p);
         }
 
         @Override
         public int getMajorVersion() {
-            return this.driver.getMajorVersion();
+            return driver.getMajorVersion();
         }
 
         @Override
         public int getMinorVersion() {
-            return this.driver.getMinorVersion();
+            return driver.getMinorVersion();
         }
 
         @Override
         public DriverPropertyInfo[] getPropertyInfo(String u, Properties p) throws SQLException {
-            return this.driver.getPropertyInfo(u, p);
+            return driver.getPropertyInfo(u, p);
         }
 
         @Override
         public boolean jdbcCompliant() {
-            return this.driver.jdbcCompliant();
+            return driver.jdbcCompliant();
         }
 
         @Override
@@ -321,14 +335,29 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
 
     protected void stop(StateManager stateManager) throws CDCException {
         try {
-            this.connectionManager.closeReplicationConnection();
-            this.connectionManager.closeSQLConnection();
-            this.pgEasyReplication = null;
+            SQLException sqlException = null;
+            try {
+                connectionManager.closeReplicationConnection();
+            } catch (SQLException sqlEx) {
+                sqlException = sqlEx;
+            }
+            try {
+                connectionManager.closeSQLConnection();
+            } catch (SQLException sqlEx) {
+                if (sqlException == null) {
+                    sqlException = sqlEx;
+                } else {
+                    sqlException.addSuppressed(sqlEx);
+                }
+                throw sqlException;
+            }
+            pgEasyReplication = null;
 
-            if (this.lastLSNReceived != null)
+            if (lastLSNReceived != null) {
                 updateState(stateManager);
-        } catch (Exception e) {
-            throw new CDCException("Error closing CDC connection", e);
+            }
+        } catch (Exception ex) {
+            throw new CDCException("Error closing CDC connection", ex);
         }
     }
 
@@ -336,8 +365,8 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
     public void onStopped(ProcessContext context) {
         try {
             stop(context.getStateManager());
-        } catch (CDCException ioe) {
-            throw new ProcessException(ioe);
+        } catch (CDCException cdcEx) {
+            throw new ProcessException(cdcEx);
         }
     }
 
@@ -347,37 +376,35 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
             // In case we get shutdown while still running, save off the current state,
             // disconnect, and shut down gracefully
             stop(context.getStateManager());
-        } catch (CDCException ioe) {
-            throw new ProcessException(ioe);
+        } catch (CDCException cdcEx) {
+            throw new ProcessException(cdcEx);
         }
     }
 
     @Override
     protected void init(final ProcessorInitializationContext context) {
-        final List<PropertyDescriptor> descriptors = new ArrayList<PropertyDescriptor>();
-        descriptors.add(HOST);
-        descriptors.add(DRIVER_NAME);
-        descriptors.add(DRIVER_LOCATION);
-        descriptors.add(DATABASE_NAME);
-        descriptors.add(USERNAME);
-        descriptors.add(PASSWORD);
-        descriptors.add(PUBLICATION);
-        descriptors.add(SLOT_NAME);
-        descriptors.add(SNAPSHOT);
-        descriptors.add(INCLUDE_BEGIN_COMMIT);
-        descriptors.add(INIT_LSN);
-        descriptors.add(DROP_SLOT_IF_EXISTS);
-
+        final List<PropertyDescriptor> descriptors = Arrays.asList(
+                HOST,
+                DRIVER_NAME,
+                DRIVER_LOCATION,
+                DATABASE_NAME,
+                USERNAME,
+                PASSWORD,
+                PUBLICATION,
+                SLOT_NAME,
+                SNAPSHOT,
+                INCLUDE_BEGIN_COMMIT,
+                SIMPLE_EVENTS,
+                INIT_LSN,
+                DROP_SLOT_IF_EXISTS);
         this.descriptors = Collections.unmodifiableList(descriptors);
 
-        final Set<Relationship> relationships = new HashSet<Relationship>();
-        relationships.add(REL_SUCCESS);
-        this.relationships = Collections.unmodifiableSet(relationships);
+        relationships = Collections.singleton(REL_SUCCESS);
     }
 
     @Override
     public Set<Relationship> getRelationships() {
-        return this.relationships;
+        return relationships;
     }
 
     @Override
@@ -390,7 +417,7 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
 
     }
 
-    // runs the initial configuration of processor
+    // Runs the initial configuration of processor
     public void setup(ProcessContext context) {
 
         final ComponentLog logger = getLogger();
@@ -400,7 +427,7 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
         final String host = context.getProperty(HOST).evaluateAttributeExpressions().getValue();
         final String database = context.getProperty(DATABASE_NAME).evaluateAttributeExpressions().getValue();
         final String username = context.getProperty(USERNAME).evaluateAttributeExpressions().getValue();
-        final boolean dropSlotIfExists = context.getProperty(DROP_SLOT_IF_EXISTS).evaluateAttributeExpressions().asBoolean();
+        final boolean dropSlotIfExists = context.getProperty(DROP_SLOT_IF_EXISTS).asBoolean();
         final String publicationName = context.getProperty(PUBLICATION).evaluateAttributeExpressions().getValue();
         final String replicationSlotName = context.getProperty(SLOT_NAME).evaluateAttributeExpressions().getValue();
 
@@ -417,9 +444,10 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
             password = "";
         }
 
-        this.hasSnapshot = context.getProperty(SNAPSHOT).asBoolean();
-        this.includeBeginCommit = context.getProperty(INCLUDE_BEGIN_COMMIT).asBoolean();
-        this.initialLSN = context.getProperty(INIT_LSN).asLong() == null ? null : context.getProperty(INIT_LSN).asLong();
+        hasSnapshot = context.getProperty(SNAPSHOT).asBoolean();
+        includeBeginCommit = context.getProperty(INCLUDE_BEGIN_COMMIT).asBoolean();
+        simpleEvents = context.getProperty(SIMPLE_EVENTS).asBoolean();
+        initialLSN = context.getProperty(INIT_LSN).asLong() == null ? null : context.getProperty(INIT_LSN).asLong();
 
         try {
 
@@ -428,97 +456,87 @@ public class CaptureChangePostgreSQL extends AbstractProcessor {
             // Actual JDBC connection is created after PostgreSQL client gets started,
             // because we need the connect-able host same as the PostgreSQL client.
             registerDriver(driverLocation, driverName);
-            this.connectionManager = new ConnectionManager();
-            this.connectionManager.setProperties(host, database, username, password, driverName);
-            this.connectionManager.createSQLConnection();
-            this.connectionManager.createReplicationConnection();
+            connectionManager = new ConnectionManager();
+            connectionManager.setProperties(host, database, username, password, getLogger());
+            connectionManager.createSQLConnection();
+            connectionManager.createReplicationConnection();
 
             stateMap = stateManager.getState(Scope.CLUSTER);
 
-            this.pgEasyReplication = new PGEasyReplication(publicationName, replicationSlotName, dropSlotIfExists, this.connectionManager);
-            this.pgEasyReplication.initializeLogicalReplication();
+            pgEasyReplication = new PGEasyReplication(publicationName, replicationSlotName, connectionManager, getLogger());
+            pgEasyReplication.initializeLogicalReplication(dropSlotIfExists);
 
             if (stateMap.get(LAST_LSN_RECEIVED) != null) {
-                this.lastLSNReceived = Long.parseLong(stateMap.get(LAST_LSN_RECEIVED));
-                this.hasRun.set(true);
+                lastLSNReceived = Long.valueOf(stateMap.get(LAST_LSN_RECEIVED));
+                hasRun.set(true);
             } else {
-                this.hasRun.set(false);
+                hasRun.set(false);
             }
 
-        } catch (final Exception ioe) {
-            logger.error("Failed to retrieve values from the State Manager. Will not attempt " + "connection until this is accomplished.", ioe);
+        } catch (final Exception ex) {
+            logger.error("Failed to setup processor", ex);
             context.yield();
-            throw new ProcessException(ioe.getMessage(), ioe);
+            throw new ProcessException(ex.getMessage(), ex);
         }
     }
 
-    List<Event> getData() {
+    private List<Event> getEvents() throws CDCException {
+
+        if (hasRun.get()) {
+            return Collections.singletonList(pgEasyReplication.readEvent(simpleEvents, includeBeginCommit, MIME_TYPE_VALUE));
+        }
+
+        getLogger().info("First run...");
 
         List<Event> events = new ArrayList<>();
 
-        if (!this.hasRun.get() && this.hasSnapshot) {
-            events.add(this.pgEasyReplication.getSnapshot());
+        if (hasSnapshot) {
+            getLogger().info("Retrieving snapshot event");
+            events.add(pgEasyReplication.getSnapshot(MIME_TYPE_VALUE));
         }
 
-        if (!this.hasRun.get() && this.initialLSN != null) {
-            events.add(this.pgEasyReplication.readEvent(true, this.includeBeginCommit, initialLSN));
+        if (initialLSN == null) {
+            getLogger().info("Retrieving first events from beginning");
+            events.add(pgEasyReplication.readEvent(simpleEvents, includeBeginCommit, MIME_TYPE_VALUE));
+        } else {
+            getLogger().info("Retrieving first events from initial LSN {}", initialLSN);
+            events.add(pgEasyReplication.readEvent(simpleEvents, includeBeginCommit, MIME_TYPE_VALUE, initialLSN));
         }
-
-        events.add(this.pgEasyReplication.readEvent(true, this.includeBeginCommit));
-
-        if (events != null)
-            this.hasRun.set(true);
 
         return events;
     }
 
     @Override
     public void onTrigger(final ProcessContext context, final ProcessSession session) throws ProcessException {
-        final ComponentLog logger = getLogger();
-
         // Indicate that this processor has executed at least once, so we know whether
         // or not the state values are valid and should be updated
-        if (this.pgEasyReplication == null) {
+        if (pgEasyReplication == null) {
             setup(context);
         }
 
-        List<FlowFile> listFlowFiles = new ArrayList<>();
+        try {
+            List<FlowFile> listFlowFiles = new ArrayList<>();
+            for (Event event : getEvents()) {
+                List<String> listData = event.getData();
 
-        List<Event> events = getData();
+                for (String data : listData) {
+                    FlowFile flowFile = session.create();
 
-        if (events == null) {
-            logger.error("Failed to retrieve events.");
-            context.yield();
-            throw new ProcessException();
-        }
+                    flowFile = session.write(flowFile, out -> out.write(data.getBytes(StandardCharsets.UTF_8)));
 
-        for (Event event : events) {
-            if (event != null) {
-                LinkedList<String> listData = event.getData();
-
-                if (!listData.isEmpty()) {
-                    for (String data : listData) {
-                        FlowFile flowFile = null;
-                        flowFile = session.create();
-
-                        flowFile = session.write(flowFile, new OutputStreamCallback() {
-                            @Override
-                            public void process(final OutputStream out) throws IOException {
-                                out.write(data.getBytes(StandardCharsets.UTF_8));
-                            }
-                        });
-
-                        flowFile = session.putAttribute(flowFile, CoreAttributes.MIME_TYPE.key(), MIME_TYPE_VALUE);
-                        listFlowFiles.add(flowFile);
-                    }
+                    flowFile = session.putAttribute(flowFile, CoreAttributes.MIME_TYPE.key(), MIME_TYPE_VALUE);
+                    listFlowFiles.add(flowFile);
                 }
 
-                this.lastLSNReceived = event.getLastLSN();
+                lastLSNReceived = event.getLastLSN();
             }
+            session.transfer(listFlowFiles, REL_SUCCESS);
+
+            hasRun.set(true);
+        } catch (CDCException cdcException) {
+            getLogger().error("Failed to retrieve events.");
+            context.yield();
+            throw new ProcessException(cdcException);
         }
-
-        session.transfer(listFlowFiles, REL_SUCCESS);
-        // getLogger().trace("...");
-
     }
 }
